# MagnusLiber

./: .gitignore  MagnusLiber.json  Messages.json  README.md  SystemMessage.md  SystemMessage.txt
bash/: MagnusLiber.sh
cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp  root_certificates.hpp  vcpkg.json
csharp-console/: Program.cs  csharp-console.sln
delphi-console/: .gitignore  MagnusLiber.dpr  MagnusLiber.dproj  README.md
go/: README.md  go.mod  go.sum  main.go
java/: README.md  pom.xml
java/src/main/java/com/jfbilodeau/magnusliber/: Configuration.java  MagnusLiber.java  Main.java  Messages.java
node.js/: README.md  index.js  package-lock.json  package.json
powershell/: MagnusLiber.ps1  README.md
python/: README.md  magnus_liber.py  requirements.txt
rust/: Cargo.toml  README.md
rust/src/: main.rs
