[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.3", features = ["derive"] }
url = "2.5.0"
env_logger = "0.11.3"